Fix overflow caused by about-us cards and about-section padding

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -7,11 +7,17 @@
     width: 400px;
     height: 100%;
     padding: 2.5rem 2rem;
-    @include mix.mqh(420px) {
-      width: 250px;
+    @include mix.mqh(450px) {
+      width: 350px;
+    }
+    @include mix.mqh(400px) {
+      width: 300px;
     }
     @include mix.mqh(300px) {
       width: 230px;
+    }
+    @include mix.mqh(250px) {
+      width: 200px;
     }
     background-color: var(--bg-secondary);
     border: 2px solid var(--fg-text);
