--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -16,10 +16,6 @@
 
   &-section {
     height: 100%;
-    padding: 0 2rem;
-    @include mix.mqh(600px) {
-      padding: 0rem 2rem;
-    }
   }
 
   &-cards {
