--- a/src/pages/Services/services.scss
+++ b/src/pages/Services/services.scss
@@ -5,7 +5,13 @@
   height: 100%;
   padding: 0rem 0rem 3rem 0rem;
   overflow-x: hidden;
-  background: linear-gradient(180deg, rgba(0,46,102,1) 26%, rgba(43,82,128,1) 60%, rgba(122,146,175,1) 84%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 46, 102, 1) 26%,
+    rgba(43, 82, 128, 1) 60%,
+    rgba(122, 146, 175, 1) 84%,
+    rgba(255, 255, 255, 1) 100%
+  );
 
   &-header {
     position: relative;
@@ -40,7 +46,7 @@
       padding: 0 1rem;
     }
   }
-  
+
   &-description {
     color: var(--bg-main);
     padding: 2rem 8rem;
